# Agentic-AI-Red-Team

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/hooks/: post_bash_audit.sh  post_write_obsidian.sh  pre_bash_safety.sh  stop_summary.sh
.github/workflows/: ci.yml
agents/: campaign.py  crew.py  llm_config.py
agents/roles/: data_extraction_agent.py  jailbreak_agent.py  privilege_escalation_agent.py  prompt_injection_agent.py  recon_agent.py  report_agent.py  webattack_agent.py
agents/tools/: http_client.py  mitre_mapper.py  obsidian_writer.py  payload_library.py
docker/: docker-compose.yml
docker/shared/: mock_llm.py
docker/target-agent/: Dockerfile  app.py
docker/target-chatbot/: Dockerfile  app.py
docker/target-multiagent/: Dockerfile  app.py
docker/target-rag/: Dockerfile  app.py  requirements.txt
docker/target-webagent/: Dockerfile  app.py
garak_scans/: run_garak.sh
obsidian-vault/.obsidian/: graph.json  workspace.json
obsidian-vault/00-Index/: Campaign-Log.md  Home.md  Setup-Checklist.md
obsidian-vault/01-Learning/: 01-What-Is-Agentic-AI.md  02-OWASP-Top10-Agentic.md  03-MITRE-ATLAS-Overview.md  04-Docker-Sandbox-Design.md  05-CrewAI-Architecture.md  06-Claude-Code-Hooks-and-MCP.md  07-PyRIT-Deep-Dive.md  08-Garak-Scanner.md
pyrit_campaigns/: memory_poisoning.py  multi_turn_injection.py
scripts/: seed_rag.py  start_lab.sh  stop_lab.sh  verify_targets.sh
tests/: test_agents_smoke.py  test_targets_reachable.py
(+8 files in other folders)
